--- a/CAO.Blackjack.Forms/Properties/Resources.resx
+++ b/CAO.Blackjack.Forms/Properties/Resources.resx
@@ -146,7 +146,7 @@
     <value>..\Resources\money.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bg_zoo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\zoo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\zoo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="card_0_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\card_0_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
