--- a/CAO.Blackjack.Forms/Properties/Resources.resx
+++ b/CAO.Blackjack.Forms/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BetAmount" xml:space="preserve">
+    <value>Bet amount</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="bg_animal_pig" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\animal_pig.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -312,7 +315,7 @@
   </data>
   <data name="ConfirmDeleteSaveFileQuestion" xml:space="preserve">
     <value>Are you sure you wish to delete your save file?
-All data will be lost permanently.</value>
+All data will be lost permanently, but you will gain a starting amount of money in the process.</value>
   </data>
   <data name="ConfirmEndGameQuestion" xml:space="preserve">
     <value>Are you sure you wish to end the game? 
@@ -335,7 +338,7 @@ Do you wish to try again?</value>
     <value>Missing Required Fields</value>
   </data>
   <data name="ErrorValidationRequiredField" xml:space="preserve">
-    <value>The '{0}' field is required.</value>
+    <value>{0} is required.</value>
   </data>
   <data name="InfoAboutCaption" xml:space="preserve">
     <value>About</value>
@@ -348,6 +351,8 @@ and test your luck by beating the odds.
 
 The dealer uses one deck containing 52 card 
 that are shuffled using the Fisher-Yates method.
+
+You may also purchase additional background images from the shop, which is accessible from the main menu.
 
 If you end up losing all your money, you can always trade your statistics and use the 'Reset Save' button on the menu to get another chance to succeed.
 
@@ -465,5 +470,10 @@ We are truly sorry for this inconvenience.</value>
   </data>
   <data name="WarningInsufficientBank" xml:space="preserve">
     <value>You do not have enough money to purchase this!</value>
+  </data>
+  <data name="WarningNoMoreFunds" xml:space="preserve">
+    <value>You do not have any more money. 
+
+In order to reset your bank to a starting amount, you need to go to the main menu and select the option to delete your game save.</value>
   </data>
 </root>
