- fix winning with a blackjack not paying 1.5x the win payout - fix the dealer starting their turn even if the player busted after clicking "Double" - fix the tie counter displaying the loss count instead of the tie count

--- a/CAO.Blackjack.Forms/Properties/Resources.resx
+++ b/CAO.Blackjack.Forms/Properties/Resources.resx
@@ -412,6 +412,11 @@ The dealer's next card would have been a
   <data name="InfoPlayerWin" xml:space="preserve">
     <value>You win {0}</value>
   </data>
+  <data name="InfoPlayerWinBlackjack" xml:space="preserve">
+    <value>Blackjack!
+
+You win {0}</value>
+  </data>
   <data name="InfoTie" xml:space="preserve">
     <value>Tie!
 You get {0} back</value>
